--- a/scss/sourse/blocks/_header.sass
+++ b/scss/sourse/blocks/_header.sass
@@ -61,6 +61,7 @@ header
 
 .nav-header
   width: 100%
+  font-size: 14px
   ul
     display: flex
     justify-content: space-between
@@ -89,6 +90,16 @@ header
       box-shadow: 0 0 33px rgb(0 0 0 / 7%)
       border-radius: 0 20px 0 20px
       overflow: hidden
+      ul
+        // border-top: 1px solid $grayColorSecond
+        // border-bottom: 1px solid $grayColorSecond
+        position: relative
+        box-shadow: none
+        border-radius: 0
+        padding-left: 30px
+        li
+          a
+            padding: 8px
       li
         // border-bottom: 1px solid $grayColorSecond
         display: block
