--- a/scss/sourse/default/_content.sass
+++ b/scss/sourse/default/_content.sass
@@ -115,12 +115,14 @@ section
 .section-stub
 	height: 75px
 @media (max-width: 576px)
+	section
+		padding: 35px 0 0
 	.head-section
 		h2
 			font-size: 24px
 	.content
 		h1
-			padding-bottom: 0px
+			padding-bottom: 15px
 	.head-section-text
 		width: 100%
 	.breadcrumbs
