--- a/scss/sourse/blocks/slider/_default-slider.sass
+++ b/scss/sourse/blocks/slider/_default-slider.sass
@@ -7,7 +7,8 @@
   top: 80%
   margin-top: -14px
   font-size: 20px
-  padding-left: 64px
+  padding-left: 55px
+  z-index: 2
   *
     display: inline-block
     vertical-align: top
