--- a/scss/sourse/pages/home/_advantages.sass
+++ b/scss/sourse/pages/home/_advantages.sass
@@ -78,6 +78,10 @@
     h3
       font-size: 14px
 @media (max-width: 576px)
+  .advantages
+    .head-section
+      margin: 0
+
   .advantages-box
     h2
       font-size: 24px
@@ -86,6 +90,16 @@
     img
       width: 40px
       height: 40px
+    h3
+      margin-bottom: 15px
+      height: 80px
   .advantages-item-text i
     width: 30px
     height: 30px
+  .advantages-grid
+    gap: 0
+  .advantages-cell-3,
+  .advantages-cell-6
+    padding-top: 30px
+  .advantages-box-mobile
+    width: 200%
