--- a/scss/sourse/pages/product/_detail.sass
+++ b/scss/sourse/pages/product/_detail.sass
@@ -78,17 +78,21 @@
 
   h3
     font-size: 28px
-    margin: 0 0 30px
+    margin: 0 0 16px
   h4
     font-size: 21px
+
+    line-height: 1
+    margin: 0 0 8px
   .main-grid
     padding: 0
 .product-info-item
-  margin-bottom: 30px
+  margin-bottom: 15px
+  padding-bottom: 15px
 
   h2
-    font-size: 16px
-    margin-bottom: 15px
+    font-size: 21px
+    margin-bottom: 0px
   .main-grid
     gap: 15px
 .product-description
@@ -99,23 +103,52 @@
 .product-description-container
   margin-bottom: 15px
 @media (max-width: 576px)
+  .product-main
+    gap: 0
   .product-info
     padding: 15px
+    h3
+      font-size: 21px
     h4
-      font-size: 16px
+      font-size: 18px
   .product-info-item
     font-size: 14px
   .product-info-item
+    h2
+      font-size: 18px
     .main-grid
       gap: 10px 0
   .product-about
     display: block
+
     .btn
       display: block
     .about-item
       height: 100px
+  .product-about-text
+    margin-top: 30px
   .product-slider-container
     height: 520px
     .lSGallery
       a
         height: 60px
+  .product-info-item
+    margin-bottom: 20px
+    padding-bottom: 20px
+  .lb-prev,
+  .lb-next
+    background: none !important
+    &::before
+      content: ""
+      @include positionElement(30px, 30px, auto, 45%)
+      background-color: $whiteColor
+      border-radius: 100%
+      margin: 0 15px
+  .lb-prev
+    &::before
+      @include bgImageEl("../images/arrows/arrow-left-gray.svg")
+      left: 0
+  .lb-next
+    &::before
+      @include bgImageEl("../images/arrows/arrow-right-gray.svg")
+      right: 0
