--- a/scss/sourse/pages/project/_catalog.sass
+++ b/scss/sourse/pages/project/_catalog.sass
@@ -13,3 +13,15 @@
   display: flex
   flex-direction: column
   justify-content: space-between
+@media (max-width: 576px)
+  .project-item
+    .main-grid
+      gap: 0
+  .project-item-img
+    height: 300px
+    border-radius: 0 50px 0 0px
+  .project-item-info
+    height: auto
+    border-radius: 0 0px 0 50px
+    h3
+      margin-bottom: 15px
