--- a/scss/sourse/blocks/slider/_lightSlider.sass
+++ b/scss/sourse/blocks/slider/_lightSlider.sass
@@ -11,7 +11,7 @@
 
 .lSPrev,
 .lSNext
-  @include positionElement(40px, 40px, auto, 0%)
+  @include positionElement(40px, 40px, auto, 0%, left, top, 2)
   // background-color: $whiteColor
   font-size: 0
   // border: 1px solid $grayColor
