--- a/scss/style.sass
+++ b/scss/style.sass
@@ -103,6 +103,7 @@
 @import "sourse/pages/_contacts.sass"
 @import "sourse/pages/_recycling.sass"
 @import "sourse/pages/_nodes.sass"
+@import "sourse/pages/_page-404.sass"
 
 @import "sourse/pages/detail/_default.sass"
 @import "sourse/pages/detail/_tabs.sass"
