--- a/style-theme.css
+++ b/style-theme.css
@@ -3099,6 +3099,7 @@ footer h3 a {
   width: 40px;
   position: absolute;
   height: 40px;
+  z-index: 2;
   left: auto;
   top: 0%;
   font-size: 0;
@@ -3839,6 +3840,38 @@ footer h3 a {
     gap: 8px;
   }
 }
+.page-404 {
+  text-align: center;
+  margin: 0 auto;
+}
+
+.page-404-img {
+  display: inline-block;
+  vertical-align: middle;
+  width: 100%;
+  height: 400px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url("../images/404.jpg");
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  font-size: 80px;
+  font-weight: 700;
+  color: #ffffff;
+  text-shadow: 0 15px 30px rgba(0, 0, 0, 0.23);
+}
+.page-404-img h1 {
+  font-size: inherit;
+  color: inherit;
+  margin: auto;
+}
+
+.page-404-text {
+  margin: 30px 0;
+}
+
 .link-next-container {
   text-align: right;
   padding: 15px 0;
@@ -3952,6 +3985,7 @@ footer h3 a {
 .main-home .main-grid {
   margin-top: auto;
   margin-bottom: auto;
+  width: 100%;
 }
 .main-home h2 {
   font-size: 64px;
