--- a/scss/sourse/blocks/slider/_lightSlider.sass
+++ b/scss/sourse/blocks/slider/_lightSlider.sass
@@ -7,11 +7,11 @@
   position: relative
   overflow: hidden
 .lSAction
-  @include positionElement(100%,1px,0,50%)
+  @include positionElement(100%,1px,0,50%, left,top,2)
 
 .lSPrev,
 .lSNext
-  @include positionElement(40px, 40px, auto, 0%, left, top, 2)
+  @include positionElement(40px, 40px, auto, 0%)
   // background-color: $whiteColor
   font-size: 0
   // border: 1px solid $grayColor
