--- a/scss/sourse/default/_content.sass
+++ b/scss/sourse/default/_content.sass
@@ -114,6 +114,35 @@ section
 
 .section-stub
 	height: 75px
+
+.img-full
+	font-size: 0
+	height: 300px
+	margin: 0 0 30px
+	gap: 30px
+	display: flex
+	br
+		display: none
+	img
+		width: 33.33%
+		height: 100%
+		object-fit: cover
+.nabor-section
+	margin: 30px 0
+.stroitelstvo-page
+	section
+		padding-top: 0
+
+.alignright
+	float: right
+	margin: 0 0px 30px 30px
+	width: 50%
+.alignleft
+	float: left
+	margin: 0 30px 30px 0
+	width: 50%
+.clear
+	clear: both
 @media (max-width: 576px)
 	section
 		padding: 35px 0 0
@@ -127,3 +156,7 @@ section
 		width: 100%
 	.breadcrumbs
 		font-size: 12px
+	.alignright,
+	.alignleft
+		width: 100%
+		margin: 0 0 30px
