--- a/scss/style.sass
+++ b/scss/style.sass
@@ -103,7 +103,6 @@
 @import "sourse/pages/_contacts.sass"
 @import "sourse/pages/_recycling.sass"
 @import "sourse/pages/_nodes.sass"
-@import "sourse/pages/_page-404.sass"
 
 @import "sourse/pages/detail/_default.sass"
 @import "sourse/pages/detail/_tabs.sass"
@@ -112,6 +111,7 @@
 
 /*-----main-start----*/ 
 @import "sourse/pages/home/_main.sass"
+@import "sourse/pages/home/_video.sass"
 @import "sourse/pages/home/_banner.sass"
 @import "sourse/pages/home/_advantages.sass"
 @import "sourse/pages/home/_feedback.sass"
