--- a/scss/sourse/blocks/_header.sass
+++ b/scss/sourse/blocks/_header.sass
@@ -1,9 +1,9 @@
 
 .stub
-  height: 102px
+  height: 99px
 
 header
-  @include positionElement(100%, auto, 0, auto, left, top, 3 )
+  @include positionElement(100%, auto, 0, auto, left, top, 4 )
   color: $whiteColor
   @include bgImageEl("../images/header-gradient.png", cover, center bottom)
   // background-color: $whiteColor
@@ -119,7 +119,7 @@ header
         transform: translateX(-50%) translateY(0)
   a
     position: relative
-    padding: 16px 25px
+    padding: 16px 0px
     &::after
       content: ''
       @include positionElement(0,4px,0,0,left,bottom)
@@ -132,6 +132,7 @@ header
       @include positionElement(20px,20px, 0px, 50%,right)
       transform: translateX(-3px) translateY(-50%)
       @include bgImageEl("../images/arrows/carret-down-white.svg", 30px)
+      display: none
       &::before
         display: none
   a
@@ -141,7 +142,17 @@ header
         width: 100%
       i
         background-image: url("../images/arrows/carret-down-red.svg")
-
+.nav-header-origin
+  a
+    line-height: 1
+.nav-header-dop
+  padding-left: 20px
+  ul
+    margin: 0
+  a
+    padding: 8px
+    &::after
+      height: 1px
 .feedback-header
   margin-left: auto
   gap: 30px
@@ -151,16 +162,31 @@ header
     margin-left: 30px
 .header-tablet-nav
   display: none
+@media (max-width: 1280px)
+  .nav-header a
+    position: relative
+    padding: 16px 10px
+  .feedback-header
+    font-size: 12px
+  .logo img
+    width: 160px
+  header
+    padding: 15px 0
+  .logo img
+    width: 120px
 @media (max-width: 992px)
   .header-tablet-nav
     display: block
     text-align: right
     .btn
       margin-right: 30px
+  .feedback-header
+    font-size: 0
 @media (max-width: 820px)
   .logo
     img
       width: 160px
+
 @media (max-width: 576px)
   header
     padding: 20px 0 15px
