--- a/scss/sourse/pages/product/_catalog.sass
+++ b/scss/sourse/pages/product/_catalog.sass
@@ -18,7 +18,7 @@
 		text-decoration: none
 
 	h3
-		font-size: $standartSize
+		font-size: 12px
 		background-color: $redColor
 		color: $whiteColor
 		border-radius: 40px 0 40px 0
@@ -26,13 +26,13 @@
 		z-index: 1
 		padding: 0px 25px
 		transition: ease-out 0.5s
-		height: 70px
+		height: 44px
 		display: flex
 		align-items: center
 		// margin-top: calc(100% - 70px)
 
 		position: relative
-		top: calc(100% - 70px)
+		top: calc(100% - 44px)
 
 		a
 
@@ -121,6 +121,16 @@
 	padding-top: 45px
 	h3
 		margin-bottom: 30px
+
+.about-item-price-extra
+	margin-top: 22px
+	height: 300px
+	border-radius: 40px 0 40px 0
+	i
+		background-image: url("../images/icons/more-white.svg")
+	a:hover
+		i
+			background-image: url("../images/icons/more-black.svg")
 @media (max-width: 576px)
 	.production-mobile-slider-container
 		padding: 0 15px
