--- a/style-theme.css
+++ b/style-theme.css
@@ -122,12 +122,12 @@ h1 {
 }
 
 h2 {
-  font-size: 40px;
+  font-size: 28px;
   line-height: 1.2;
 }
 
 h3 {
-  font-size: 28px;
+  font-size: 21px;
   line-height: 1.2;
 }
 
@@ -293,6 +293,49 @@ section {
   height: 75px;
 }
 
+.img-full {
+  font-size: 0;
+  height: 300px;
+  margin: 0 0 30px;
+  gap: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.img-full br {
+  display: none;
+}
+.img-full img {
+  width: 33.33%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.nabor-section {
+  margin: 30px 0;
+}
+
+.stroitelstvo-page section {
+  padding-top: 0;
+}
+
+.alignright {
+  float: right;
+  margin: 0 0px 30px 30px;
+  width: 50%;
+}
+
+.alignleft {
+  float: left;
+  margin: 0 30px 30px 0;
+  width: 50%;
+}
+
+.clear {
+  clear: both;
+}
+
 @media (max-width: 576px) {
   section {
     padding: 35px 0 0;
@@ -308,6 +351,11 @@ section {
   }
   .breadcrumbs {
     font-size: 12px;
+  }
+  .alignright,
+  .alignleft {
+    width: 100%;
+    margin: 0 0 30px;
   }
 }
 /*-----default-content-end----*/
@@ -2713,14 +2761,14 @@ input[type=range]:active + .range-num::before {
 /*-----forms-end----*/
 /*-----blocks-start----*/
 .stub {
-  height: 102px;
+  height: 99px;
 }
 
 header {
   width: 100%;
   position: absolute;
   height: auto;
-  z-index: 3;
+  z-index: 4;
   left: 0;
   top: auto;
   color: #ffffff;
@@ -2866,7 +2914,7 @@ header.show li i {
 }
 .nav-header a {
   position: relative;
-  padding: 16px 25px;
+  padding: 16px 0px;
 }
 .nav-header a::after {
   content: "";
@@ -2895,6 +2943,7 @@ header.show li i {
   background-repeat: no-repeat;
   background-size: 30px;
   background-image: url("../images/arrows/carret-down-white.svg");
+  display: none;
 }
 .nav-header a i::before {
   display: none;
@@ -2904,6 +2953,23 @@ header.show li i {
 }
 .nav-header a:hover i {
   background-image: url("../images/arrows/carret-down-red.svg");
+}
+
+.nav-header-origin a {
+  line-height: 1;
+}
+
+.nav-header-dop {
+  padding-left: 20px;
+}
+.nav-header-dop ul {
+  margin: 0;
+}
+.nav-header-dop a {
+  padding: 8px;
+}
+.nav-header-dop a::after {
+  height: 1px;
 }
 
 .feedback-header {
@@ -2921,6 +2987,24 @@ header.show li i {
   display: none;
 }
 
+@media (max-width: 1280px) {
+  .nav-header a {
+    position: relative;
+    padding: 16px 10px;
+  }
+  .feedback-header {
+    font-size: 12px;
+  }
+  .logo img {
+    width: 160px;
+  }
+  header {
+    padding: 15px 0;
+  }
+  .logo img {
+    width: 120px;
+  }
+}
 @media (max-width: 992px) {
   .header-tablet-nav {
     display: block;
@@ -2928,6 +3012,9 @@ header.show li i {
   }
   .header-tablet-nav .btn {
     margin-right: 30px;
+  }
+  .feedback-header {
+    font-size: 0;
   }
 }
 @media (max-width: 820px) {
@@ -3090,6 +3177,7 @@ footer h3 a {
   width: 100%;
   position: absolute;
   height: 1px;
+  z-index: 2;
   left: 0;
   top: 50%;
 }
@@ -3099,7 +3187,6 @@ footer h3 a {
   width: 40px;
   position: absolute;
   height: 40px;
-  z-index: 2;
   left: auto;
   top: 0%;
   font-size: 0;
@@ -3313,7 +3400,7 @@ footer h3 a {
   display: -ms-flexbox;
   display: flex;
   height: 100%;
-  z-index: 4;
+  z-index: 5;
   left: 0;
   top: 0;
   opacity: 0;
@@ -3774,8 +3861,7 @@ footer h3 a {
 }
 
 .nodes-section {
-  padding: 60px 0;
-  font-size: 18px;
+  padding: 60px 0 0;
 }
 .nodes-section h2 {
   margin: 0 0 30px;
@@ -3783,12 +3869,13 @@ footer h3 a {
 }
 
 .nodes-stage {
-  height: 620px;
+  min-height: 620px;
   position: relative;
   overflow: hidden;
   border-radius: 0 50px 0 50px;
   padding: 30px 60px;
   color: #ffffff;
+  margin-top: 60px;
 }
 
 .nodes-stage-item {
@@ -3828,6 +3915,10 @@ footer h3 a {
   overflow: hidden;
 }
 
+.nodes-middle-text {
+  margin-top: 30px;
+}
+
 @media (max-width: 576px) {
   .nodes-stage-item {
     -ms-grid-column-span: 12;
@@ -3840,38 +3931,6 @@ footer h3 a {
     gap: 8px;
   }
 }
-.page-404 {
-  text-align: center;
-  margin: 0 auto;
-}
-
-.page-404-img {
-  display: inline-block;
-  vertical-align: middle;
-  width: 100%;
-  height: 400px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-image: url("../images/404.jpg");
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  font-size: 80px;
-  font-weight: 700;
-  color: #ffffff;
-  text-shadow: 0 15px 30px rgba(0, 0, 0, 0.23);
-}
-.page-404-img h1 {
-  font-size: inherit;
-  color: inherit;
-  margin: auto;
-}
-
-.page-404-text {
-  margin: 30px 0;
-}
-
 .link-next-container {
   text-align: right;
   padding: 15px 0;
@@ -3973,7 +4032,7 @@ footer h3 a {
 /*-----detail-end----*/  
 /*-----main-start----*/ 
 .main-home {
-  height: 100vh;
+  height: calc(100vh - 99px);
   min-height: 620px;
   background-color: #202020;
   position: relative;
@@ -3985,7 +4044,6 @@ footer h3 a {
 .main-home .main-grid {
   margin-top: auto;
   margin-bottom: auto;
-  width: 100%;
 }
 .main-home h2 {
   font-size: 64px;
@@ -4094,6 +4152,9 @@ footer h3 a {
   transition: ease-out 0.75s;
   opacity: 0;
 }
+.main-home-img.img-mobile {
+  display: none;
+}
 
 .main-scroll-down {
   width: 80px;
@@ -4124,6 +4185,10 @@ footer h3 a {
           transform: translateY(15px);
 }
 
+.main-home * {
+  text-decoration: none;
+}
+
 @media (max-width: 992px) {
   .main-home h2 {
     font-size: 48px;
@@ -4131,7 +4196,7 @@ footer h3 a {
 }
 @media (max-width: 576px) {
   .main-home {
-    height: 450px;
+    height: 383px;
     min-height: auto;
   }
   .main-home h2 {
@@ -4149,9 +4214,35 @@ footer h3 a {
     top: auto;
     bottom: 16px;
   }
+  .home-slider-item {
+    padding-top: 30px;
+  }
+  .main-home-img.img-desktop {
+    display: none;
+  }
+  .main-home-img.img-mobile {
+    display: block;
+  }
   .main-scroll-down {
     height: 85px;
     padding: 22px 4px;
+  }
+  .home-slider-item {
+    height: 383px;
+  }
+}
+.video-section .btn {
+  width: 100%;
+}
+.video-section video {
+  width: 100%;
+  height: 340px;
+  margin: 15px 0;
+}
+
+@media (max-width: 576px) {
+  .video-section video {
+    height: 240px;
   }
 }
 .banner {
@@ -4242,7 +4333,7 @@ footer h3 a {
   position: absolute;
   height: 720px;
   left: -30px;
-  top: 80px;
+  top: 60px;
   background-color: #E52521;
   border-radius: 0 30px 0 30px;
 }
@@ -4926,7 +5017,7 @@ footer h3 a {
   text-decoration: none;
 }
 .product-item h3 {
-  font-size: 16px;
+  font-size: 12px;
   background-color: #E52521;
   color: #ffffff;
   border-radius: 40px 0 40px 0;
@@ -4935,7 +5026,7 @@ footer h3 a {
   padding: 0px 25px;
   -webkit-transition: ease-out 0.5s;
   transition: ease-out 0.5s;
-  height: 70px;
+  height: 44px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4943,7 +5034,7 @@ footer h3 a {
       -ms-flex-align: center;
           align-items: center;
   position: relative;
-  top: calc(100% - 70px);
+  top: calc(100% - 44px);
 }
 .product-item h3 a {
   position: relative;
@@ -5070,6 +5161,18 @@ footer h3 a {
 }
 .product-empty h3 {
   margin-bottom: 30px;
+}
+
+.about-item-price-extra {
+  margin-top: 22px;
+  height: 300px;
+  border-radius: 40px 0 40px 0;
+}
+.about-item-price-extra i {
+  background-image: url("../images/icons/more-white.svg");
+}
+.about-item-price-extra a:hover i {
+  background-image: url("../images/icons/more-black.svg");
 }
 
 @media (max-width: 576px) {
